
Bugs fixed
----------
- wifi: a zero value for the backoff timer might be discarded and a new value
  might be generated by an erroneous call to NotifyCollision().
- Bug 2636 - Add to doxygen a list of all registered TypeIds
- Bug 2928 - BlockAckManager::NeedBarRetransmission returns "true" infinitely
- Bug 2985 - PhyTxEnd tracecallback not implemented
- Issue #22 - wifi: Station long retry counter is incremented twice if BlockAck was not received
- Issue #40 - IdealWifiManager not working if stations are moving
- Issue #84 - Wi-Fi removing wrong header due to copy-paste error
- Issue #94 - wifi retransmitted frames not marked as retransmits
- Issue #107 - Wi-Fi: Frame capture model works incorrectly if two signals arrive at the same time
- Issue #110 - Wi-Fi: PCAP trace file gives unexpected results
- Issue #116 - Wi-Fi: Incorrect state when receiving A-MPDU in WifiPhy
- Issue #119 - Waf --lcov-report option was broken
- Issue #169 - Ideal rate manager does not work when non best-effort traffic is used

Known issues
------------
In general, known issues are tracked on the project tracker available
at https://gitlab.com/nsnam/ns-3-dev/issues

Release 3.30.1
==============
Release 3.30.1 is a maintenance release that fixes the following issues from
the ns-3.30 release:

- fix issue with Block Ack transmit window leading to low throughput or
  connection dropping
- fix invalid restriction on Wi-Fi VHT Capabilities MaxMpduLength field
- support for Apple clang version 11.0.0 (macOS Catalina preview release)
- fix the handling of ICMP time exceeded responses
- fix syntax error in Wi-Fi-based Tap Bridge Python example

Availability
------------
This release is available from:
https://www.nsnam.org/release/ns-allinone-3.30.1.tar.bz2

Supported platforms
-------------------
The list of supported platforms includes those listed for ns-3.30 plus
- macOS 10.15 preview (Catalina) with Apple clang version 11.0.0

New user-visible features
-------------------------